Bug 595310 - Drag and drop of text into an input field does not remove placeholder. r=ehsan,roc a=jst